--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
         context: ./library-system-api
      ports:
       - "8080:8080"
+     depends: 
+        mysql-db 
 
 
  mysql-db:
@@ -23,3 +25,4 @@ services:
       MYSQL_PASSWORD: springuser
     ports:
       - "3306:3306"
+    command: --lower_case_table_names=1
