--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,22 @@
 version: '3'
 
 services:
- library-system-ui:
-   build:
-     context: ./library-system-ui
-   ports:
-     - "3000:3000"
+  library-system-ui:
+    build:
+      context: ./library-system-ui
+    ports:
+      - "3000:3000"
 
- library-system-api:
-     build:
-        context: ./library-system-api
-     ports:
+  library-system-api:
+    build:
+      context: ./library-system-api
+    ports:
       - "8080:8080"
+    depends_on:
+      -  mysql-db
 
 
- mysql-db:
+  mysql-db:
     image: mysql:latest
     environment:
       MYSQL_ROOT_PASSWORD: some_pass
@@ -23,7 +25,9 @@ services:
       MYSQL_PASSWORD: springuser
     ports:
       - "3306:3306"
-<<<<<<< Updated upstream
-=======
     command: --lower_case_table_names=1
->>>>>>> Stashed changes
+    volumes:
+      - mysql-data:/var/lib/mysql
+
+volumes:
+  mysql-data:
