--- a/library-system-api/src/main/resources/application.properties
+++ b/library-system-api/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mysql://mysql-db:3306/dockerdb
+spring.datasource.url=jdbc:mysql://localhost:3306/dockerdb
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=springuser
 spring.datasource.password=springuser
@@ -7,3 +7,4 @@ spring.sql.init.schema-locations=classpath:/schema.sql
 spring.sql.init.mode=never
 logging.level.root=WARN
 logging.level.com.barclays=DEBUG
+
